--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular": "1.2.x",
     "angular-route": "1.2.x",
     "almond": "0.2.x",
-    "requirejs": "2.1.x"
+    "requirejs": "2.1.x",
+    "sjcl": "1.0.x"
   },
   "devDependencies": {
     "angular-mocks": "1.2.x"
